<resources>
    <string name="app_name">DEP Eat</string>
    <string name="username"> Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="registra_nome">Inserisci nome</string>
    <string name="registra_cognome">Inserisci cognome</string>
    <string name="conferma_password"> Conferma Password</string>
    <string name="numero_telefono">Numero Tel</string>
    <string name="checkout">Check Out</string>
    <string name="label">label text</string>
    <string name="chage_to_grid">Grid visualization</string>


</resources>
