<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
       >

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/username"
            android:id="@+id/ed_nome"
            android:inputType="textEmailAddress"/>


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/password"
            android:id="@+id/passwordR"
            android:inputType="textPassword"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/numero_telefono"
            android:id="@+id/ed_num_tel"
            android:inputType="phone"/>

        // puo esseec he i due bottoni register sono uguali
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/conf_registBotton"
            android:enabled="false"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>